fix: modal hides itself using display:none instead of visibility/opacity/pointer-events

--- a/css/styles.css
+++ b/css/styles.css
@@ -618,15 +618,24 @@ img {
   width: 100%;
   height: 100%;
 
-  display: none;
+  display: flex;
   justify-content: center;
   align-items: center;
 
   background-color: var(--navy-blue-modal);
+
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+
+  transition: opacity var(--default-transition),
+    visibility var(--default-transition);
 }
 
 .overlay.is-open {
-  display: flex;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .modal {
